--- a/teacher.html
+++ b/teacher.html
@@ -1,2 +1,119 @@
-const STUDENT_PLAYER_URL = "https://davidwaltman-lang.github.io/FourScore/player.html";
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Connections – Builder</title>
+
+<style>
+body {
+  font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial;
+  background: #f8fafc;
+  margin: 0;
+  padding: 20px;
+}
+.card {
+  max-width: 900px;
+  margin: auto;
+  background: white;
+  border: 1px solid #e5e7eb;
+  border-radius: 16px;
+  padding: 16px;
+}
+.grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+}
+input {
+  width: 100%;
+  padding: 8px;
+  margin-top: 6px;
+}
+button {
+  padding: 10px 14px;
+  border-radius: 12px;
+  border: 1px solid #d1d5db;
+  background: #f9fafb;
+  font-weight: 700;
+  cursor: pointer;
+}
+button.primary {
+  background: #111827;
+  color: white;
+}
+.small {
+  font-size: 12px;
+  color: #6b7280;
+}
+</style>
+</head>
+
+<body>
+<div class="card">
+  <h2>Connections – Teacher Builder</h2>
+
+  <div class="grid" id="builder"></div>
+
+  <div style="margin-top:16px;">
+    <button onclick="makeLink()">Copy student link</button>
+    <button onclick="printGrid()">Print grid-only</button>
+  </div>
+
+  <div class="small" id="out" style="margin-top:10px;"></div>
+</div>
+
+<script>
+const STUDENT_PLAYER_URL =
+  "https://davidwaltman-lang.github.io/FourScore/player.html";
+
+const builder = document.getElementById("builder");
+let groups = [];
+
+for (let i = 0; i < 4; i++) {
+  const div = document.createElement("div");
+  div.innerHTML = `
+    <input placeholder="Category ${i+1}">
+    <input placeholder="Term 1">
+    <input placeholder="Term 2">
+    <input placeholder="Term 3">
+    <input placeholder="Term 4">
+  `;
+  builder.appendChild(div);
+}
+
+function collect() {
+  groups = [];
+  [...builder.children].forEach(col => {
+    const inputs = col.querySelectorAll("input");
+    groups.push({
+      category: inputs[0].value,
+      terms: [...inputs].slice(1).map(i => i.value)
+    });
+  });
+}
+
+function encode(obj) {
+  return btoa(unescape(encodeURIComponent(JSON.stringify(obj))));
+}
+
+function makeLink() {
+  collect();
+  const link = STUDENT_PLAYER_URL + "#p=" + encode({ groups });
+  navigator.clipboard.writeText(link);
+  document.getElementById("out").textContent = "Student link copied.";
+}
+
+function printGrid() {
+  collect();
+  const words = groups.flatMap(g => g.terms).sort(() => Math.random() - 0.5);
+  const w = window.open("");
+  w.document.write("<h2>Connections</h2><div style='display:grid;grid-template-columns:repeat(4,1fr);gap:10px;'>");
+  words.forEach(t => w.document.write("<div style='border:1px solid #000;padding:10px;text-align:center'>" + t + "</div>"));
+  w.document.write("</div><script>window.print()</script>");
+  w.document.close();
+}
+</script>
+</body>
+</html>
 
