--- a/teacher.html
+++ b/teacher.html
@@ -57,9 +57,12 @@ button.primary {
   <div class="grid" id="builder"></div>
 
   <div style="margin-top:16px;">
-    <button onclick="makeLink()">Copy student link</button>
-    <button onclick="printGrid()">Print grid-only</button>
-  </div>
+  <button onclick="loadDemo()">Load demo</button>
+  <button onclick="makeLink()">Copy student link</button>
+  <button onclick="printGrid()">Print grid-only</button>
+  <div class="small" style="margin-top:6px;">Tip: Click “Load demo” to test buttons fast.</div>
+</div>
+
 
   <div class="small" id="out"></div>
 </div>
